--- a/scss/style.scss
+++ b/scss/style.scss
@@ -238,72 +238,129 @@ $mobile: 539px;
 #visual {
 	width: 100%;
 	height: calc(100vh - 120px);
-	background-image: url(../img/br8.jpg);
-	background-color: #fff;
-	background-repeat: no-repeat;
-	background-size: cover;
-	overflow: hidden;
-	object-fit: cover;
-	opacity: 0.8;
 	position: relative;
 
-	// img {
-	// 	width: 30%;
-	// 	height: 90%;
-	// 	object-fit: cover;
-	// 	transition: 0.5s;
-	// 	position: absolute;
-	// 	right: 11%;
-	// 	top: 5%;
-	// 	z-index: 1;
-	// 	// box-shadow: 5px 5px 20px  #333;
-	// }
+	#slider {
+		width: 100%;
+		height: 100%;
+		position: relative;
+		overflow: hidden;
+
+		.list {
+			width: calc(100% * 4);
+			height: inherit;
+			margin-left: -100%;
+
+			> li {
+				width: calc(100% / 4);
+				height: inherit;
+				float: left;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				.txt {
+					width: 60%;
+					position: absolute;
+					top: 40%;
+					left: 15%;
+					transform: translateY(-30%);
+
+					h1 {
+						font: 30px/1 "Spartan";
+						font-size: 70px;
+						color: #fff;
+						margin-bottom: 30px;
+						text-shadow: 2px 2px 2px #999;
+					}
+					p {
+						font: 30px/1.3 "Spartan";
+						font-size: 35px;
+						color: #fff;
+					}
+				}
+
+				&[data-index="1"] {
+					background-image: url(../img/p1.jpg);
+					background-size: cover;
+					background-position: center;
+					background-repeat: no-repeat;
+				}
+				&[data-index="2"] {
+					background-image: url(../img/p3.jpg);
+					background-size: cover;
+					background-position: center;
+					background-repeat: no-repeat;
+				}
+				&[data-index="1"] {
+					background-image: url(../img/p2.jpg);
+					background-size: cover;
+					background-position: center;
+					background-repeat: no-repeat;
+				}
+				&[data-index="1"] {
+					background-image: url(../img/p4.jpg);
+					background-size: cover;
+					background-position: center;
+					background-repeat: no-repeat;
+				}
+			}
+		}
+	}
 	.inner {
 		width: 1180px;
 		height: 100%;
 		margin: 0 auto;
-		position: relative;
 
-		.txt {
-			width: 60%;
-			position: absolute;
-			top: 30%;
-			left: -5%;
-			transform: translateY(-30%);
+		// position: relative;
+		// background-image: url(../img/br8.jpg);
+		// background-color: #fff;
+		// background-repeat: no-repeat;
+		// background-size: cover;
+		// overflow: hidden;
+		// object-fit: cover;
+		// opacity: 0.8;
 
-			h1 {
-				font: 700 90px/1 "STIX Two Text";
-				color: #111;
-				margin-bottom: 50px;
-				letter-spacing: 3px;
-				// position: absolute;
-				// left: -15%;
-				// bottom: 20vh;
-			}
-			p {
-				font: bold 18px/1.3 "STIX Two Text";
-				color: #444;
-				margin-bottom: 80px;
-			}
+		// .txt {
+		// 	width: 60%;
+		// 	position: absolute;
+		// 	top: 30%;
+		// 	left: -5%;
+		// 	transform: translateY(-30%);
 
-			a {
-				font-size: 25px;
-				color: #333;
-				display: inline-block;
-				width: 60px;
-				height: 60px;
-				border-radius: 50%;
-				background: rgba(221, 221, 221, 0.4);
-				margin-right: 80px;
-				text-align: center;
-				line-height: 60px;
+		// 	h1 {
+		// 		font: 700 90px/1 "STIX Two Text";
+		// 		color: #111;
+		// 		margin-bottom: 50px;
+		// 		letter-spacing: 3px;
+		// 		// position: absolute;
+		// 		// left: -15%;
+		// 		// bottom: 20vh;
+		// 	}
+		// 	p {
+		// 		font: bold 18px/1.3 "STIX Two Text";
+		// 		color: #444;
+		// 		margin-bottom: 80px;
+		// 	}
 
-				&:hover {
-					background: #efefef;
-					color: #fff;
-				}
-			}
-		}
+		// 	a {
+		// 		font-size: 25px;
+		// 		color: #333;
+		// 		display: inline-block;
+		// 		width: 60px;
+		// 		height: 60px;
+		// 		border-radius: 50%;
+		// 		background: rgba(221, 221, 221, 0.4);
+		// 		margin-right: 80px;
+		// 		text-align: center;
+		// 		line-height: 60px;
+
+		// 		&:hover {
+		// 			background: #efefef;
+		// 			color: #fff;
+		// 		}
+		// 	}
+		// }
 		.sns {
 			position: absolute;
 			left: 3%;
@@ -311,11 +368,11 @@ $mobile: 539px;
 			z-index: 2;
 
 			li {
-				float: left;
-				margin-right: 60px;
+				// float: left;
+				margin-top: 30px;
 
 				a {
-					font: bold 15px/1 "STIX Two Text";
+					font-size: 25px;
 					color: #111;
 					transition: 0.5s;
 				}
@@ -979,31 +1036,27 @@ $mobile: 539px;
 		background: #efefef;
 		overflow: hidden;
 		position: relative;
-	
+
 		.inner {
 			width: 1330px;
 			margin: 50px auto;
 			position: relative;
-	
+
 			.wrap {
 				width: 100%;
 				padding: 0 30px;
-				
-	
-				
+
 				article {
 					width: 18%;
 					margin: 0;
-				
-					
+
 					&:nth-of-type(3) {
 						display: none;
-						
 					}
 					&:nth-of-type(4) {
 						display: inline-block;
 					}
-	
+
 					&:nth-of-type(1) span {
 						display: block;
 						margin-bottom: 20px;
@@ -1027,7 +1080,7 @@ $mobile: 539px;
 						font: 300 13px/1.5 "arial";
 						color: #3c3c3b;
 						margin-bottom: 20px;
-	
+
 						&:last-child {
 							margin-top: 30px;
 							font-size: 12px;
@@ -1046,10 +1099,10 @@ $mobile: 539px;
 			background: #bdbdbd;
 			padding: 20px 50px;
 			position: relative;
-	
+
 			> .wrap {
 				width: 100%;
-	
+
 				.company {
 					width: 70%;
 				}
@@ -1058,7 +1111,7 @@ $mobile: 539px;
 					top: 50%;
 					right: 10vw;
 					transform: translateY(-50%);
-	
+
 					a {
 						display: inline-block;
 						content: "";
