--- a/scss/style.scss
+++ b/scss/style.scss
@@ -265,6 +265,7 @@ $mobile: 539px;
 					top: 40%;
 					left: 15%;
 					transform: translateY(-30%);
+					display: none;
 
 					h1 {
 						font: 30px/1 "Spartan";
@@ -366,6 +367,7 @@ $mobile: 539px;
 			left: 3%;
 			bottom: 30px;
 			z-index: 2;
+			display: none;
 
 			li {
 				// float: left;
