--- a/css/style.css
+++ b/css/style.css
@@ -994,7 +994,7 @@ fieldset {
         #header .inner .menuWeb #gnb li a {
           display: block;
           padding: 10px 20px;
-          font: 400 13px/1 "Spartan";
+          font: 400 12px/1 "Spartan";
           color: #111;
           transition: 0.5s;
           box-sizing: border-box;
@@ -1024,7 +1024,7 @@ fieldset {
         #header .inner .menuWeb .util li a {
           width: 100%;
           display: inline-block;
-          font-size: 30px;
+          font-size: 20px;
           color: #111;
           margin-left: 20px;
           padding: 10px 10px;
@@ -1205,7 +1205,7 @@ fieldset {
 #news {
   width: 100%;
   padding: 200px 0;
-  background-color: #fdf3f0; }
+  background-color: #fff; }
   #news .inner {
     width: 1180px;
     margin: 0 auto; }
@@ -1258,7 +1258,7 @@ fieldset {
 #brand {
   width: 100%;
   padding: 200px 0;
-  background: rgba(240, 224, 222, 0.8); }
+  background: rgba(252, 237, 235, 0.8); }
   #brand .inner {
     width: 1180px;
     margin: 0 auto;
@@ -1451,42 +1451,66 @@ fieldset {
             color: #fff; }
 
 #footer {
-  width: 100vw;
-  padding-top: 50px;
+  width: 100%;
+  padding-top: 30px;
   background: #efefef;
   overflow: hidden;
   position: relative; }
   #footer .inner {
-    width: 1330px;
+    width: 1180px;
+    padding: 0px 80px;
     margin: 50px auto;
     position: relative; }
     #footer .inner .wrap {
-      width: 100%; }
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
       #footer .inner .wrap::after {
         content: "";
         display: block;
         clear: both; }
       #footer .inner .wrap article {
-        width: 20%;
         height: 200px;
         padding: 10px 20px;
         margin-right: 20px;
-        float: left;
-        position: relative; }
-        #footer .inner .wrap article:nth-of-type(3) {
-          width: 10%; }
-        #footer .inner .wrap article:nth-of-type(4) {
+        float: left; }
+        #footer .inner .wrap article.box1 {
+          width: 22%; }
+          #footer .inner .wrap article.box1 span {
+            display: block;
+            margin-bottom: 20px;
+            font: normal 19px/1 "arial"; }
+          #footer .inner .wrap article.box1 p:last-child {
+            font-size: 11px; }
+        #footer .inner .wrap article.box3 {
+          width: 13%; }
+          #footer .inner .wrap article.box3 span a {
+            display: block;
+            margin-bottom: 20px;
+            font: bold 13px/1 "arial";
+            color: #222; }
+        #footer .inner .wrap article.box4 {
           margin-right: 0px;
-          width: 31%; }
-        #footer .inner .wrap article:nth-of-type(1) span {
-          display: block;
-          margin-bottom: 20px;
-          font: normal 19px/1 "arial"; }
-        #footer .inner .wrap article:nth-of-type(3) span a {
-          display: block;
-          margin-bottom: 20px;
-          font: bold 13px/1 "arial";
-          color: #222; }
+          width: 40%; }
+          #footer .inner .wrap article.box4 p:nth-of-type(2) {
+            font: 12px/1.5 "arial"; }
+          #footer .inner .wrap article.box4 a {
+            display: inline-block;
+            text-align: center;
+            padding: 0px 10px;
+            width: auto;
+            height: 40px;
+            border: 1px solid #888;
+            font-size: 13px;
+            line-height: 40px;
+            color: #333;
+            margin-right: 15px; }
+            #footer .inner .wrap article.box4 a:last-child {
+              margin-right: 0px; }
+            #footer .inner .wrap article.box4 a img {
+              max-width: 100%;
+              height: auto; }
         #footer .inner .wrap article .menu {
           font: 400 14px/1 "arial";
           color: #333;
@@ -1503,38 +1527,24 @@ fieldset {
             font-size: 12px;
             color: #222; }
           #footer .inner .wrap article p a {
-            font: 400 15px/1.1 "arial";
+            font: 400 14px/1.1 "arial";
             color: #222; }
-      #footer .inner .wrap .box4 p:nth-of-type(2) {
-        font: 12px/1.5 "arial"; }
-      #footer .inner .wrap .box4 > a {
-        display: inline-block;
-        text-align: center;
-        padding: 5px 20px;
-        height: 35px;
-        border: 1px solid #888;
-        font-size: 13px;
-        line-height: 35px;
-        color: #333;
-        margin-right: 15px; }
-        #footer .inner .wrap .box4 > a img {
-          max-width: 100%;
-          height: auto; }
   #footer .list {
     width: 100%;
     background: #bdbdbd;
+    margin-top: 80px;
     padding: 20px 50px;
     position: relative; }
     #footer .list > .wrap {
-      width: 1330px; }
+      width: 1180px; }
       #footer .list > .wrap .company {
-        width: 70%; }
+        width: 100%; }
       #footer .list > .wrap .sns {
         position: absolute;
         top: 50%;
-        right: 10vw;
+        right: 5%;
         transform: translateY(-50%); }
-        #footer .list > .wrap .sns a {
+        #footer .list > .wrap .sns > a {
           display: inline-block;
           content: "";
           font-size: 20px;
