--- a/css/style.css
+++ b/css/style.css
@@ -965,6 +965,27 @@ fieldset {
     width: 100%;
     height: auto; }
 
+.pop {
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 100px;
+  box-sizing: border-box; }
+  .pop img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+  .pop span {
+    font: bold 14px/1 'arial';
+    color: #fff;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer; }
+
 #header {
   width: 100vw;
   background: #fff;
