--- a/css/style.css
+++ b/css/style.css
@@ -996,9 +996,6 @@ fieldset {
     right: 20px;
     cursor: pointer; }
 
-.sub_visual {
-  display: none; }
-
 #vidGallery {
   width: 100%;
   padding: 100px; }
@@ -1018,6 +1015,48 @@ fieldset {
       width: 65%; }
       #vidGallery article .con h2 {
         margin-bottom: 20px; }
+
+.location {
+  height: 100%; }
+  .location #map {
+    width: 100%;
+    height: 500px;
+    margin-top: 100px; }
+  .location .branch {
+    float: right;
+    margin-top: 20px; }
+    .location .branch li {
+      float: left;
+      margin-right: 10px; }
+      .location .branch li a {
+        display: block;
+        width: 200px;
+        height: 40px;
+        border: 1px solid #555;
+        border-radius: 20px;
+        font: bold 12px/40px "맑은 고딕";
+        color: #555;
+        text-align: center; }
+      .location .branch li.on a {
+        background: #ddd;
+        color: #333; }
+  .location .traffic {
+    float: left;
+    margin-top: 20px; }
+    .location .traffic li {
+      float: left;
+      margin-right: 10px; }
+      .location .traffic li a {
+        display: block;
+        width: 200px;
+        height: 40px;
+        background: #555;
+        font: bold 12px/40px "맑은 고딕";
+        color: #fff;
+        text-align: center; }
+      .location .traffic li.on a {
+        background: #aaa;
+        color: #333; }
 
 #header {
   width: 100vw;
