--- a/css/style.css
+++ b/css/style.css
@@ -1018,6 +1018,8 @@ fieldset {
 
 .location {
   height: 100%; }
+  .location .inner h1 {
+    text-align: center; }
   .location #map {
     width: 100%;
     height: 500px;
