--- a/css/style.css
+++ b/css/style.css
@@ -975,26 +975,36 @@ fieldset {
     width: 100%;
     height: auto; }
 
-.pop {
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  top: 0;
-  left: 0;
-  padding: 100px;
-  box-sizing: border-box; }
-  .pop img {
+.gallery .inner {
+  padding: 0px 150px; }
+  .gallery .inner h1 {
+    text-align: center; }
+  .gallery .inner #gallery ul li {
+    display: inline;
+    float: left;
+    margin-right: 20px; }
+    .gallery .inner #gallery ul li:last-child {
+      margin-right: 0px; }
+  .gallery .inner .pop {
     width: 100%;
-    height: 100%;
-    object-fit: cover; }
-  .pop span {
-    font: bold 14px/1 'arial';
-    color: #fff;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    cursor: pointer; }
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 100px;
+    box-sizing: border-box; }
+    .gallery .inner .pop img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+    .gallery .inner .pop span {
+      font: bold 14px/1 "arial";
+      color: #fff;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      cursor: pointer; }
 
 #vidGallery {
   width: 100%;
@@ -1018,6 +1028,8 @@ fieldset {
 
 .location {
   height: 100%; }
+  .location .sub_visual {
+    background-color: #fff; }
   .location .inner h1 {
     text-align: center; }
   .location #map {
