--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,19 +1,46 @@
-.pop{
-    width:100%; height:100vh; 
-    background:rgba(0,0,0,0.8);
-    position:fixed; top:0; left:0;  
-    padding:100px; box-sizing:border-box; 
+.gallery {
+	.sub_visual {
+	}
+	.inner {
+        padding: 0px 150px;
+        h1{
+            text-align: center;
+        }
+		#gallery {
+			ul {
+				li {
+					display: inline;
+					float: left;
+                    margin-right: 20px;
 
-    img{
-        width:100%; height:100%; object-fit:cover; 
-    }
-    span{
-        font:bold 14px/1 'arial'; color:#fff; 
-        position:absolute; top:20px; right:20px; 
-        cursor:pointer; 
-    }
+                    &:last-child{ margin-right: 0px;}
+				}
+			}
+		}
 
+		.pop {
+			width: 100%;
+			height: 100vh;
+			background: rgba(0, 0, 0, 0.8);
+			position: fixed;
+			top: 0;
+			left: 0;
+			padding: 100px;
+			box-sizing: border-box;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+			span {
+				font: bold 14px/1 "arial";
+				color: #fff;
+				position: absolute;
+				top: 20px;
+				right: 20px;
+				cursor: pointer;
+			}
+		}
+	}
 }
-// .sub_visual {
-//    display: none;
-// }
