--- a/css/style.css
+++ b/css/style.css
@@ -975,6 +975,8 @@ fieldset {
     width: 100%;
     height: auto; }
 
+.gallery .sub_visual {
+  background-color: #fff; }
 .gallery .inner {
   padding: 0px 150px; }
   .gallery .inner h1 {
@@ -1276,16 +1278,16 @@ fieldset {
           background-position: center;
           background-repeat: no-repeat; }
         #visual #slider .list > li[data-index="2"] {
-          background-image: url(../img/p3.jpg);
+          background-image: url(../img/p4.jpg);
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat; }
-        #visual #slider .list > li[data-index="1"] {
+        #visual #slider .list > li[data-index="3"] {
           background-image: url(../img/p2.jpg);
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat; }
-        #visual #slider .list > li[data-index="1"] {
+        #visual #slider .list > li[data-index="4"] {
           background-image: url(../img/p4.jpg);
           background-size: cover;
           background-position: center;
@@ -1308,6 +1310,45 @@ fieldset {
           transition: 0.5s; }
         #visual .inner .sns li:hover a {
           color: #fff; }
+
+#popup {
+  width: 600px;
+  height: 300px;
+  border-radius: 20px;
+  background: #edd6da;
+  padding: 20px;
+  box-sizing: border-box;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 10px 10px 10px 30px rgba(0, 0, 0, 0.03); }
+  #popup .pop_inner {
+    width: 100%;
+    height: 100%;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    padding: 40px; }
+    #popup .pop_inner h1 {
+      text-align: center;
+      font: bold 30px/1 "Spartan"; }
+    #popup .pop_inner .pop_content {
+      width: 100%;
+      min-height: 150px;
+      padding-top: 50px; }
+    #popup .pop_inner::after {
+      content: "";
+      display: block; }
+    #popup .pop_inner .wrap {
+      float: left; }
+      #popup .pop_inner .wrap label {
+        font: bold 13px/1 "Spartan";
+        margin-left: 4px; }
+    #popup .pop_inner .close {
+      float: right;
+      font: 14px/1 "Spartan";
+      color: #fff; }
 
 #news {
   width: 100%;
