--- a/scss/style.scss
+++ b/scss/style.scss
@@ -311,7 +311,7 @@ $mobile: 539px;
 			}
 		}
 	}
-	.inner {
+	.btns_inner {
 		width: 1180px;
 		height: 100%;
 		margin: 0 auto;
@@ -450,28 +450,39 @@ $mobile: 539px;
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
+		text-align: center;
+	
+	
 
 		h1 {
-			font: 700 25px/1 "STIX Two Text";
+			display: inline-block;
+			font: 700 25px/1 "Spartan";
+			padding-bottom: 20px;
 			color: #222;
-			text-align: center;
-			margin-bottom: 30px;
+			margin-bottom: 70px;
+			border-bottom: 3px solid #555;
 		}
 		.wrap {
 			width: 100%;
-
+			margin: 0 auto;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			flex-direction: row;
+		
+		
 			article {
-				width: 280px;
-				float: left;
-				margin-right: 20px;
+				margin: 0 auto;
+
 
 				&:last-child {
 					margin-right: 0px;
 				}
 
 				.pic {
-					width: 100%;
-					height: 120px;
+					width: 280px;
+					height: 280px;
+					border-radius: 50%;
 					background: #333;
 					overflow: hidden;
 
@@ -480,11 +491,12 @@ $mobile: 539px;
 						height: 100%;
 						object-fit: cover;
 						transition: 0.5s;
+
+						&:hover .img {
+							transform: scale(1.2);
+						}
 					}
 
-					&:hover img {
-						transform: scale(1.2);
-					}
 				}
 
 				h2 {
@@ -493,11 +505,11 @@ $mobile: 539px;
 
 					a {
 						display: inline-block;
-						font: bold 16px/30px "STIX Two Text";
+						font: bold 16px/30px "Spartan";
 						width: 150px;
 						height: 30px;
 						// background: #97ccb8;
-						border: 1px dashed rgb(255, 198, 206);
+						border: 1px dashed rgb(255, 189, 199);
 						// border-radius: 20px;
 						text-align: center;
 						color: #333;
@@ -512,7 +524,7 @@ $mobile: 539px;
 				}
 
 				p {
-					font: 14px/1.4 "STIX Two Text";
+					font: 14px/1.4 "Spartan";
 					color: #777;
 				}
 			}
@@ -523,7 +535,7 @@ $mobile: 539px;
 #brand {
 	width: 100%;
 	padding: 200px 0;
-	background: rgba(252, 237, 235, 0.8);
+	background: rgba(234, 212, 212, 0.73);
 
 	.inner {
 		width: 1180px;
@@ -555,7 +567,7 @@ $mobile: 539px;
 
 					h2 {
 						width: 50%;
-						font: 700 18px/1 "STIX Two Text";
+						font: 700 18px/1 "Spartan";
 						color: #222;
 						margin-bottom: 20px;
 						text-align: left;
@@ -563,7 +575,7 @@ $mobile: 539px;
 						padding-top: 20px;
 					}
 					P {
-						font: 600 25px/1.3 "STIX Two Text";
+						font: 600 25px/1.3 "Spartan";
 						color: #222;
 						text-align: left;
 						margin-bottom: 20px;
@@ -587,7 +599,7 @@ $mobile: 539px;
 						height: 30px;
 						border: 1px solid #333;
 						color: #222;
-						font: bold 14px/30px "STIX Two Text";
+						font: bold 14px/30px "Spartan";
 						text-align: center;
 					}
 				}
@@ -613,13 +625,13 @@ $mobile: 539px;
 					text-align: center;
 
 					h2 {
-						font: 100 20px/1 "STIX Two Text";
+						font: 100 20px/1 "Spartan";
 						color: #222;
 						text-align: left;
 						margin-bottom: 15px;
 					}
 					p {
-						font: 15px/1.3 "STIX Two Text";
+						font: 15px/1.3 "Spartan";
 						text-align: left;
 					}
 					a {
@@ -660,13 +672,13 @@ $mobile: 539px;
 					text-align: center;
 
 					h2 {
-						font: 100 20px/1 "STIX Two Text";
+						font: 100 20px/1 "Spartan";
 						color: #222;
 						text-align: left;
 						margin-bottom: 15px;
 					}
 					p {
-						font: 15px/1.3 "STIX Two Text";
+						font: 15px/1.3 "Spartan";
 						text-align: left;
 					}
 					a {
@@ -694,20 +706,85 @@ $mobile: 539px;
 //  banner ---------------------------------------------------------------
 #banner {
 	width: 100%;
-	padding: 120px 0;
-	background: url(../img/b6.jpg) no-repeat center/cover fixed;
+	padding: 80px 0;
+	background: url(../img/b6.jpg)  no-repeat center/cover fixed;
+	background-image: rgba(0, 0, 0, 0.2);
+
 
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
+		text-align: center;
 
 		h1 {
-			@include title($fontSize: 30px, $color: #fff, $mb: 30px);
+			font: bold 15px/1 'spartan'; color: #fff;
+			margin-bottom: 15px;
+		}
+		h2 {
+			font: bold 35px/1 'spartan'; color: #fff;
+			margin-bottom: 15px;
 		}
 		p {
 			font: 16px/1.3 "arial";
-			color: #ddd;
+			color: #fff;
 			text-align: center;
+			margin-bottom: 35px;
+		}
+		.box {
+			width: 100%;
+			text-align: center;
+			margin-left: 20px;
+			
+
+			a {
+				text-align: left;
+				padding-left: 20px;
+				display: inline-block;
+				width: 300px;
+				height: 60px;
+				margin-right: 10px;
+				background: rgba(0, 0, 0, 0.8);
+				color: #fff;
+				font: bold 15px/60px "Spartan";
+				position: relative;
+				transition: 0.5;
+				
+
+				&:last-child {
+					width: 150px;
+					border: 1px solid #fff;
+					margin-right: 0;
+					background:rgba(0, 0, 0, 0.05);
+					box-sizing: border-box;	
+					
+				}
+				&:hover {
+
+					border: 1px solid #fff;
+
+					&:hover:last-child {
+						background: rgba(237, 176, 176, 0.8);
+					}
+
+
+				}
+
+				i {
+					position: absolute;
+					right: 20px;
+					font-size:15px;
+					line-height: 60px;
+
+					&:last-child{
+						
+						right: 50px;
+					}
+					
+				}
+				
+
+
+			}
 		}
 	}
 }
@@ -716,7 +793,7 @@ $mobile: 539px;
 #comment {
 	width: 100%;
 	padding: 150px 0;
-	background: rgba(240, 224, 222, 0.8);
+	background: rgba(255, 252, 251, 0.8);
 
 	.inner {
 		width: 1180px;
