--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -1029,11 +1030,20 @@ fieldset {
         margin-bottom: 20px; }
 
 .location {
-  height: 100%; }
+  height: 100%;
+  text-align: center; }
   .location .sub_visual {
-    background-color: #fff; }
+    background-color: #bbb; }
   .location .inner h1 {
-    text-align: center; }
+    font: bold  50px/1 'Noto Sans KR';
+    margin-bottom: 30px;
+    letter-spacing: 1.5px; }
+  .location .inner h2 {
+    font: bold 35px/1 'Noto Sans KR';
+    color: #222;
+    border-bottom: 2px solid #222;
+    padding-bottom: 30px;
+    letter-spacing: 1.5px; }
   .location #map {
     width: 100%;
     height: 500px;
@@ -1050,7 +1060,7 @@ fieldset {
         height: 40px;
         border: 1px solid #555;
         border-radius: 20px;
-        font: bold 12px/40px "맑은 고딕";
+        font: bold 12px/40px 'Noto Sans KR';
         color: #555;
         text-align: center; }
       .location .branch li.on a {
@@ -1067,7 +1077,7 @@ fieldset {
         width: 200px;
         height: 40px;
         background: #555;
-        font: bold 12px/40px "맑은 고딕";
+        font: bold 12px/40px 'Noto Sans KR';
         color: #fff;
         text-align: center; }
       .location .traffic li.on a {
@@ -1242,7 +1252,6 @@ fieldset {
   #visual #slider {
     width: 100%;
     height: 100%;
-    position: relative;
     overflow: hidden; }
     #visual #slider .list {
       width: calc(100% * 4);
@@ -1273,43 +1282,36 @@ fieldset {
             font-size: 35px;
             color: #fff; }
         #visual #slider .list > li[data-index="1"] {
-          background-image: url(../img/p1.jpg);
+          background: #ddd;
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat; }
         #visual #slider .list > li[data-index="2"] {
-          background-image: url(../img/p4.jpg);
+          background: #bbb;
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat; }
         #visual #slider .list > li[data-index="3"] {
-          background-image: url(../img/p2.jpg);
+          background: #ddd;
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat; }
         #visual #slider .list > li[data-index="4"] {
-          background-image: url(../img/p4.jpg);
+          background: #ddd;
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat; }
   #visual .btns_inner {
-    width: 1180px;
-    height: 100%;
+    width: 100%;
     margin: 0 auto; }
-    #visual .btns_inner .sns {
+    #visual .btns_inner .next {
+      display: inline-block;
+      font-size: 80px;
+      color: #fff;
       position: absolute;
-      left: 3%;
-      bottom: 30px;
-      z-index: 2;
-      display: none; }
-      #visual .btns_inner .sns li {
-        margin-top: 30px; }
-        #visual .btns_inner .sns li a {
-          font-size: 25px;
-          color: #111;
-          transition: 0.5s; }
-        #visual .btns_inner .sns li:hover a {
-          color: #fff; }
+      top: 50%;
+      right: 5%;
+      transform: translateY(-50%); }
 
 #popup {
   width: 600px;
@@ -1373,12 +1375,12 @@ fieldset {
       align-items: center;
       flex-direction: row; }
       #news .inner .wrap article {
+        width: 280px;
+        height: 280px;
         margin: 0 auto; }
-        #news .inner .wrap article:last-child {
-          margin-right: 0px; }
         #news .inner .wrap article .pic {
-          width: 280px;
-          height: 280px;
+          width: 100%;
+          height: 100%;
           border-radius: 50%;
           background: #333;
           overflow: hidden; }
@@ -1387,7 +1389,7 @@ fieldset {
             height: 100%;
             object-fit: cover;
             transition: 0.5s; }
-            #news .inner .wrap article .pic img:hover .img {
+            #news .inner .wrap article .pic img:hover img {
               transform: scale(1.2); }
         #news .inner .wrap article h2 {
           margin-bottom: 10px;
@@ -1555,11 +1557,11 @@ fieldset {
     margin: 0 auto;
     text-align: center; }
     #banner .inner h1 {
-      font: bold 15px/1 'spartan';
+      font: bold 15px/1 "spartan";
       color: #fff;
       margin-bottom: 15px; }
     #banner .inner h2 {
-      font: bold 35px/1 'spartan';
+      font: bold 35px/1 "spartan";
       color: #fff;
       margin-bottom: 15px; }
     #banner .inner p {
