--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
 
 $tablet: 1179px;
 $mobile: 539px;
@@ -246,7 +247,6 @@ $mobile: 539px;
 	#slider {
 		width: 100%;
 		height: 100%;
-		position: relative;
 		overflow: hidden;
 
 		.list {
@@ -285,25 +285,29 @@ $mobile: 539px;
 				}
 
 				&[data-index="1"] {
-					background-image: url(../img/p1.jpg);
+					// background-image: url(../img/p1.jpg);
+					background: #ddd;
 					background-size: cover;
 					background-position: center;
 					background-repeat: no-repeat;
 				}
 				&[data-index="2"] {
-					background-image: url(../img/p4.jpg);
+					// background-image: url(../img/p4.jpg);
+					background: #bbb;
 					background-size: cover;
 					background-position: center;
 					background-repeat: no-repeat;
 				}
 				&[data-index="3"] {
-					background-image: url(../img/p2.jpg);
+					// background-image: url(../img/p2.jpg);
+					background: #ddd;
 					background-size: cover;
 					background-position: center;
 					background-repeat: no-repeat;
 				}
 				&[data-index="4"] {
-					background-image: url(../img/p4.jpg);
+					// background-image: url(../img/p4.jpg);
+					background: #ddd;
 					background-size: cover;
 					background-position: center;
 					background-repeat: no-repeat;
@@ -312,79 +316,26 @@ $mobile: 539px;
 		}
 	}
 	.btns_inner {
-		width: 1180px;
-		height: 100%;
+		width: 100%;
 		margin: 0 auto;
+		
 
-		// position: relative;
-		// background-image: url(../img/br8.jpg);
-		// background-color: #fff;
-		// background-repeat: no-repeat;
-		// background-size: cover;
-		// overflow: hidden;
-		// object-fit: cover;
-		// opacity: 0.8;
-
-		// .txt {
-		// 	width: 60%;
+		// .prev {
+		// 	display: inline-block;
+		// 	font-size: 80px; color: #fff;
 		// 	position: absolute;
-		// 	top: 30%;
-		// 	left: -5%;
-		// 	transform: translateY(-30%);
-
-		// 	h1 {
-		// 		font: 700 90px/1 "STIX Two Text";
-		// 		color: #111;
-		// 		margin-bottom: 50px;
-		// 		letter-spacing: 3px;
-		// 		// position: absolute;
-		// 		// left: -15%;
-		// 		// bottom: 20vh;
-		// 	}
-		// 	p {
-		// 		font: bold 18px/1.3 "STIX Two Text";
-		// 		color: #444;
-		// 		margin-bottom: 80px;
-		// 	}
-
-		// 	a {
-		// 		font-size: 25px;
-		// 		color: #333;
-		// 		display: inline-block;
-		// 		width: 60px;
-		// 		height: 60px;
-		// 		border-radius: 50%;
-		// 		background: rgba(221, 221, 221, 0.4);
-		// 		margin-right: 80px;
-		// 		text-align: center;
-		// 		line-height: 60px;
-
-		// 		&:hover {
-		// 			background: #efefef;
-		// 			color: #fff;
-		// 		}
-		// 	}
+		// 	top: 50%;
+		// 	left: 5%;
+			
 		// }
-		.sns {
+		.next {
+			display: inline-block;
+			font-size: 80px; color: #fff;
 			position: absolute;
-			left: 3%;
-			bottom: 30px;
-			z-index: 2;
-			display: none;
-
-			li {
-				// float: left;
-				margin-top: 30px;
-
-				a {
-					font-size: 25px;
-					color: #111;
-					transition: 0.5s;
-				}
-				&:hover a {
-					color: #fff;
-				}
-			}
+			top: 50%;
+			right: 5%;
+			transform: translateY(-50%);
+			
 		}
 	}
 }
@@ -405,14 +356,13 @@ $mobile: 539px;
 	.pop_inner {
 		width: 100%;
 		height: 100%;
-		border:2px solid #fff;
+		border: 2px solid #fff;
 		border-radius: 20px;
 		padding: 40px;
-		
-		h1{
+
+		h1 {
 			text-align: center;
 			font: bold 30px/1 "Spartan";
-
 		}
 
 		.pop_content {
@@ -451,8 +401,6 @@ $mobile: 539px;
 		width: 1180px;
 		margin: 0 auto;
 		text-align: center;
-	
-	
 
 		h1 {
 			display: inline-block;
@@ -469,22 +417,21 @@ $mobile: 539px;
 			justify-content: space-between;
 			align-items: center;
 			flex-direction: row;
-		
-		
+
 			article {
+				width: 280px;
+				height: 280px;
 				margin: 0 auto;
 
-
-				&:last-child {
-					margin-right: 0px;
-				}
-
 				.pic {
-					width: 280px;
-					height: 280px;
+					width: 100%;
+					height: 100%;
 					border-radius: 50%;
 					background: #333;
 					overflow: hidden;
+
+					&:hover {
+					}
 
 					img {
 						width: 100%;
@@ -492,11 +439,10 @@ $mobile: 539px;
 						object-fit: cover;
 						transition: 0.5s;
 
-						&:hover .img {
+						&:hover img {
 							transform: scale(1.2);
 						}
 					}
-
 				}
 
 				h2 {
@@ -707,9 +653,8 @@ $mobile: 539px;
 #banner {
 	width: 100%;
 	padding: 80px 0;
-	background: url(../img/b6.jpg)  no-repeat center/cover fixed;
+	background: url(../img/b6.jpg) no-repeat center/cover fixed;
 	background-image: rgba(0, 0, 0, 0.2);
-
 
 	.inner {
 		width: 1180px;
@@ -717,11 +662,13 @@ $mobile: 539px;
 		text-align: center;
 
 		h1 {
-			font: bold 15px/1 'spartan'; color: #fff;
+			font: bold 15px/1 "spartan";
+			color: #fff;
 			margin-bottom: 15px;
 		}
 		h2 {
-			font: bold 35px/1 'spartan'; color: #fff;
+			font: bold 35px/1 "spartan";
+			color: #fff;
 			margin-bottom: 15px;
 		}
 		p {
@@ -734,7 +681,6 @@ $mobile: 539px;
 			width: 100%;
 			text-align: center;
 			margin-left: 20px;
-			
 
 			a {
 				text-align: left;
@@ -748,42 +694,32 @@ $mobile: 539px;
 				font: bold 15px/60px "Spartan";
 				position: relative;
 				transition: 0.5;
-				
 
 				&:last-child {
 					width: 150px;
 					border: 1px solid #fff;
 					margin-right: 0;
-					background:rgba(0, 0, 0, 0.05);
-					box-sizing: border-box;	
-					
+					background: rgba(0, 0, 0, 0.05);
+					box-sizing: border-box;
 				}
 				&:hover {
-
 					border: 1px solid #fff;
 
 					&:hover:last-child {
 						background: rgba(237, 176, 176, 0.8);
 					}
-
-
 				}
 
 				i {
 					position: absolute;
 					right: 20px;
-					font-size:15px;
+					font-size: 15px;
 					line-height: 60px;
 
-					&:last-child{
-						
+					&:last-child {
 						right: 50px;
 					}
-					
 				}
-				
-
-
 			}
 		}
 	}
