--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -1,83 +1,87 @@
 @charset "utf-8";
 
+/*
+"Spartan"
+'STIX Two Text'
+'Noto Sans KR'
+*/
 
 .location {
 	height: 100%;
 	text-align: center;
 
-	.sub_visual{
+	.sub_visual {
 		background-color: #bbb;
 	}
-	.inner{
-		h1{
-			font:bold  50px/1 'Noto Sans KR';
+	.inner {
+		h1 {
+			font: bold 50px/1 "Noto Sans KR";
 			margin-bottom: 30px;
 			letter-spacing: 1.5px;
 		}
-		h2{
-			font: bold 35px/1 'Noto Sans KR'; color: #222;
+		h2 {
+			font: bold 35px/1 "Noto Sans KR";
+			color: #222;
 			border-bottom: 2px solid #222;
 			padding-bottom: 30px;
 			letter-spacing: 1.5px;
 		}
-	}
 
-	#map {
-		width: 100%;
-		height: 500px;
-		margin-top: 100px;
-	}
-	.branch {
-		
-		float: right;
-		margin-top: 20px;
+		#map {
+			width: 100%;
+			height: 500px;
+			margin-top: 100px;
+		}
+		.branch {
+			float: right;
+			margin-top: 20px;
 
-		li {
-			float: left;
-			margin-right: 10px;
+			li {
+				float: left;
+				margin-right: 10px;
 
-			a {
-				display: block;
-				width: 200px;
-				height: 40px;
-				border: 1px solid #555;
-				border-radius: 20px;
-				font: bold 12px/40px 'Noto Sans KR';
-				color: #555;
-				text-align: center;
-			}
-			&.on {
 				a {
-				
-					background: #ddd;
-					color: #333;
+					display: block;
+					width: 200px;
+					height: 40px;
+					border: 1px solid #555;
+					border-radius: 20px;
+					font: bold 12px/40px "Noto Sans KR";
+					color: #555;
+					text-align: center;
+				}
+				&.on {
+					a {
+						background: #ddd;
+						color: #333;
+					}
 				}
 			}
 		}
-	}
 
-	.traffic {
-		float: left;
-		margin-top: 20px;
-
-		li {
+		.traffic {
 			float: left;
-			margin-right: 10px;
+			margin-top: 20px;
 
-			a {
-				display: block;
-				width: 200px;
-				height: 40px;
-				background: #555;
-				font: bold 12px/40px 'Noto Sans KR';
-				color: #fff;
-				text-align: center;
-			}
+			li {
+				float: left;
+				margin-right: 10px;
 
-			&.on {
 				a {
-					background: #aaa;
-					color: #333;
+					display: block;
+					width: 200px;
+					height: 40px;
+					background: #555;
+					font: bold 12px/40px "Noto Sans KR";
+					color: #fff;
+					text-align: center;
+				}
+
+				&.on {
+					a {
+						background: #aaa;
+						color: #333;
+					}
 				}
 			}
 		}
