--- a/scss/_youtube.scss
+++ b/scss/_youtube.scss
@@ -1,29 +1,52 @@
 @charset "utf-8";
 
-#vidGallery{
-	width:100%; 
-	padding:100px; 
-	 
-	article{
-		width:100%; 
-		border:1px solid #ccc; 
-		padding:30px; 
-		margin-bottom:30px; 
-		display:flex; 
-		justify-content:space-between;
-		flex-wrap:wrap; 
-        
+/*
+"Spartan"
+'STIX Two Text'
+'Noto Sans KR'
+*/
 
-		a{
-			width:30%; 
-			img{ width:100%; }
+.youtube {
+	width: 100%;
+	text-align: center;
+	.sub_visual {
+	}
+	.inner {
+		h1 {
+			font: bold 30px/1 "Noto Sans KR";
 		}
-		.con{
-			width:65%; 
+		#vidGallery {
+			width: 100%;
+			padding: 100px;
+			display: flex;
+			justify-content: space-around;
+			flex-wrap: wrap;
 
-            h2{
-                margin-bottom: 20px;
-            }
+			article {
+				width: 300px;
+				height: 400px;
+				border: 1px solid #ccc;
+				padding: 30px;
+				margin-bottom: 30px;
+				text-align: center;
+
+				a {
+					width: 30%;
+					img {
+						width: 200px;
+					}
+				}
+				.con {
+					width: 65%;
+
+					h2 {
+						width: 100%;
+						display: inline-block;
+						font: bold 20px/1.5 "Noto Sans KR";
+						margin-bottom: 20px;
+					}
+				}
+			}
 		}
 	}
 }
