--- a/scss/style.scss
+++ b/scss/style.scss
@@ -655,8 +655,8 @@ $mobile: 539px;
 #banner {
 	width: 100%;
 	padding: 80px 0;
-	background: url(../img/b6.jpg) no-repeat center/cover fixed;
-	background-image: rgba(0, 0, 0, 0.2);
+	background: url(../img/banner2.jpg) no-repeat center/cover fixed;
+	background-image: rgba(0, 0, 0, 0.02);
 
 	.inner {
 		width: 1180px;
